[gd_scene load_steps=15 format=3 uid="uid://dln7xo63ikh3k"]

[ext_resource type="Script" uid="uid://d0bqb1c1h35wp" path="res://scenes/game_ui/game_ui.gd" id="1_1i64n"]
[ext_resource type="LabelSettings" uid="uid://qdykiiylaggv" path="res://scenes/label_75.tres" id="2_najyh"]
[ext_resource type="Texture2D" uid="uid://dhcfq1juug1ru" path="res://Assets/Sprites/UI/textGetReady.png" id="3_2cwxn"]
[ext_resource type="Texture2D" uid="uid://c42nhwabeqalv" path="res://Assets/Sprites/UI/tapTick.png" id="4_hk0ve"]
[ext_resource type="Texture2D" uid="uid://i226rtrqfqpn" path="res://Assets/Sprites/UI/textGameOver.png" id="5_t24f4"]
[ext_resource type="Texture2D" uid="uid://bs0v2bu31y61k" path="res://Assets/Sprites/UI/UIbg.png" id="6_e13be"]
[ext_resource type="Texture2D" uid="uid://duxaechd3165o" path="res://Assets/Sprites/UI/buttonLarge.png" id="7_falxo"]
[ext_resource type="LabelSettings" uid="uid://bpmssielnp82s" path="res://scenes/game_ui/label_32_yellow.tres" id="7_pxslt"]
[ext_resource type="Texture2D" uid="uid://b2akkjgeahful" path="res://Assets/Sprites/UI/medalBronze.png" id="8_d1cf8"]
[ext_resource type="FontFile" uid="uid://due6jbyye53ld" path="res://Assets/Fonts/font_score.ttf" id="10_pxslt"]

[sub_resource type="Animation" id="Animation_t24f4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/StartMenu/TextureRect2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8qcbp"]
resource_name = "play"
length = 0.8
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/StartMenu/TextureRect2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(2, 2), Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e13be"]
_data = {
&"RESET": SubResource("Animation_t24f4"),
&"play": SubResource("Animation_8qcbp")
}

[sub_resource type="LabelSettings" id="LabelSettings_d1cf8"]
font = ExtResource("10_pxslt")
font_size = 55
outline_size = 16
outline_color = Color(0.607843, 0.313726, 0.0823529, 1)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_1i64n")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "0"
label_settings = ExtResource("2_najyh")

[node name="StartMenu" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/StartMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 73.0
grow_horizontal = 2
texture = ExtResource("3_2cwxn")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = 4.0
offset_right = 29.5
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_hk0ve")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_e13be")
}
autoplay = "play"

[node name="GameOverMenu" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -210.0
offset_right = 206.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="GameOverMenu"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("5_t24f4")

[node name="panel" type="TextureRect" parent="GameOverMenu"]
layout_mode = 2
texture = ExtResource("6_e13be")

[node name="MarginContainer" type="MarginContainer" parent="GameOverMenu/panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverMenu/panel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu/panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="GameOverMenu/panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "medal"
label_settings = ExtResource("7_pxslt")
horizontal_alignment = 1

[node name="MedalImg" type="TextureRect" parent="GameOverMenu/panel/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_d1cf8")

[node name="MedalImg" type="VBoxContainer" parent="GameOverMenu/panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="GameOverMenu/panel/MarginContainer/HBoxContainer/MedalImg"]
layout_mode = 2
text = "score"
label_settings = ExtResource("7_pxslt")
horizontal_alignment = 1

[node name="CurrentScore" type="Label" parent="GameOverMenu/panel/MarginContainer/HBoxContainer/MedalImg"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = ExtResource("2_najyh")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="GameOverMenu/panel/MarginContainer/HBoxContainer/MedalImg"]
layout_mode = 2
text = "best"
label_settings = ExtResource("7_pxslt")
horizontal_alignment = 1

[node name="Heighscore" type="Label" parent="GameOverMenu/panel/MarginContainer/HBoxContainer/MedalImg"]
unique_name_in_owner = true
layout_mode = 2
text = "50"
label_settings = ExtResource("2_najyh")
horizontal_alignment = 1

[node name="PlayButton" type="TextureButton" parent="GameOverMenu"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("7_falxo")

[node name="Label" type="Label" parent="GameOverMenu/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -25.5
offset_right = 28.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
text = "OK"
label_settings = SubResource("LabelSettings_d1cf8")

[connection signal="button_down" from="GameOverMenu/PlayButton" to="." method="_on_play_button_button_down"]
